code: add background shift out & some bugfix

--- a/src/assets/styles/base.less
+++ b/src/assets/styles/base.less
@@ -1,10 +1,15 @@
 // element UI fix
 .el-collapse-item__header {
-  padding: 0px 10px;
+  padding: 0;
+  font-size: 14px;
+  color: #666666;
   user-select: none;
 }
 .el-collapse-item__wrap {
-  padding: 0px 10px;
+  padding: 0;
+}
+.el-collapse-item__content {
+  padding-bottom: 18px !important;
 }
 .el-collapse {
   border: 0px;
